--- a/src/main/resources/templates/movieTimes/update.html
+++ b/src/main/resources/templates/movieTimes/update.html
@@ -1,6 +1,5 @@
 
 
-
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
@@ -177,31 +176,59 @@
     <!-- Bỏ hình ảnh và thẻ h1 -->
 </div>
 <div class="nav">
-    <form action="/theater/check">
-        <span style="line-height: normal;color: #ffffff"  >Tên rạp</span>
-        <input name="nameTheater"  type="text">
+    <form action="/room/check">
+        <input name="roomName"  type="text">
         <input type="submit" value="Tìm kiếm">
     </form>
 </div>
 <div class="menu">
     <a th:href="@{/movie}"  >Phim</a>
-    <a th:href="@{/room}">Phòng</a>
-
-    <a th:href="@{/theater}"  style="background: #0d47a1" >Rạp</a>
+    <a th:href="@{/room}" >Phòng</a>
+    <a th:href="@{/theater}" >Rạp</a>
     <a th:href="@{/movieTime}" >Giờ chiếu</a>
-    <a th:href="@{/movieTimes}"  >Lịch chiếu</a>
+    <a th:href="@{/movieTimes}" style="background: #0d47a1" >Lịch chiếu</a>
     <a th:href="@{/ticket}"  >Đặt vé</a>
-
-
 </div>
-<div class="code">
+<div class="code" style="padding: 20px; background-color: #fff; border-radius: 5px; box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);">
+    <a href="/movieTimes" class="button"><-trở về</a>
+    <form class="create" th:action="@{/movieTimes/update}" th:object="${movieTimes}" method="post" style="margin-top: 20px;">
+        <input type="hidden" th:field="*{id}">
+        <span>Rạp</span>
+        <select  style="width: 70%;height: 30px" th:field="*{theater}">
+            <option th:each="theater,index : ${theaters}" th:value="${theater.id}" th:text="${theater.nameTheater}"></option>
+        </select>
+        <span>Phim</span>
+        <select  style="width: 70%;height: 30px" th:field="*{movie}">
+            <option th:each="movie,index : ${movies}" th:value="${movie.id}" th:text="${movie.nameMovie}"></option>
+        </select>
+        <span>Phòng</span>
+        <select  style="width: 70%;height: 30px" th:field="*{room}">
+            <option th:each="room,index : ${rooms}" th:value="${room.id}" th:text="${room.roomName}"></option>
+        </select>
+        <span>Ngày chiếu</span>
+        <input  style="width: 70%;height: 30px" th:field="*{showDate}" type="date">
+        <div class="movie-time">
+            <span>Giờ chiếu</span>
+            <div class="time-list" th:field="*{movieTime}">
+                <label th:each="time,index : ${movieTimeList}" class="time-label">
+                    <input th:value="${time.id}" th:id="'movieTime' + ${index}" th:name="movieTime" th:type="radio" />
+                    <span th:text="${time.showtime}"></span>
+                </label>
+            </div>
+        </div>
+        <span>Giá vé</span>
+        <input  style="width: 70%;height: 30px" th:field="*{fare}" type="number">
 
-    <button class="button" onclick="window.location.href='/room'"><-Trở về</button>
-
-
+        <span>Số vé đã bán</span>
+        <input  style="width: 70%;height: 30px" th:field="*{numberOfTicketsSold}" type="number">
+        <span>Tổng số tiền</span>
+        <input  style="width: 70%;height: 30px" th:field="*{totalMoney}" type="number">
+        <input type="submit" class="button"   th:value="Lưu">
+    </form>
 </div>
 </body>
 </html>
+
 
 
 
