--- a/src/main/resources/templates/movie/showByName.html
+++ b/src/main/resources/templates/movie/showByName.html
@@ -169,15 +169,18 @@
 </div>
 <div class="nav">
     <form action="/movie/check">
+        <span style="line-height: normal;color: #ffffff"  >Tên phim</span>
         <input name="nameMovie"  type="text">
         <input type="submit" value="Tìm kiếm">
     </form>
 </div>
 <div class="menu">
-    <a th:href="@{/movie}" >Phim</a>
+    <a th:href="@{/movie}" style="background: #0d47a1" >Phim</a>
     <a th:href="@{/room}" >Phòng</a>
     <a th:href="@{/theater}" >Rạp</a>
     <a th:href="@{/movieTime}" >Giờ chiếu</a>
+    <a th:href="@{/movieTimes}" >Lịch chiếu</a>
+    <a th:href="@{/ticket}"  >Đặt vé</a>
 </div>
 <div class="code">
 
