--- a/src/main/resources/templates/movieTime/index.html
+++ b/src/main/resources/templates/movieTime/index.html
@@ -174,10 +174,13 @@
     </form>
 </div>
 <div class="menu">
-    <a th:href="@{/movieTime}" >Giờ chiếu</a>
+
     <a th:href="@{/movie}" >Phim</a>
     <a th:href="@{/room}" >Phòng</a>
     <a th:href="@{/theater}" >Rạp</a>
+    <a th:href="@{/movieTime}" style="background: #0d47a1" >Giờ chiếu</a>
+    <a th:href="@{/movieTimes}" >Lịch chiếu</a>
+    <a th:href="@{/ticket}"  >Đặt vé</a>
 
 </div>
 <div class="code">
