--- a/src/main/resources/templates/ticket/showMovie.html
+++ b/src/main/resources/templates/ticket/showMovie.html
@@ -177,21 +177,18 @@
     <!-- Bỏ hình ảnh và thẻ h1 -->
 </div>
 <div class="nav">
-    <form action="/theater/check">
-        <span style="line-height: normal;color: #ffffff"  >Tên rạp</span>
-        <input name="nameTheater"  type="text">
+    <form action="/room/check">
+        <input name="roomName"  type="text">
         <input type="submit" value="Tìm kiếm">
     </form>
 </div>
 <div class="menu">
     <a th:href="@{/movie}"  >Phim</a>
     <a th:href="@{/room}">Phòng</a>
-
-    <a th:href="@{/theater}"  style="background: #0d47a1" >Rạp</a>
+    <a th:href="@{/theater}"   >Rạp</a>
     <a th:href="@{/movieTime}" >Giờ chiếu</a>
     <a th:href="@{/movieTimes}"  >Lịch chiếu</a>
-    <a th:href="@{/ticket}"  >Đặt vé</a>
-
+    <a th:href="@{/ticket}" style="background: #0d47a1" >Đặt vé</a>
 
 </div>
 <div class="code">
@@ -199,9 +196,25 @@
     <button class="button" onclick="window.location.href='/room'"><-Trở về</button>
 
 
+    <form th:action="@{/ticket/showMovieTimes}" method="get">
+        <!-- Sử dụng input ẩn để truyền idMovie -->
+        <input type="hidden" name="idMovie" th:value="${movie.id}">
+
+        <!-- Hiển thị thông tin về phim -->
+        <span th:text="${movie.nameMovie}"></span>
+        <span th:text="${movie.category}"></span>
+
+        <!-- Đặt vé -->
+        <input type="submit" value="Đặt vé">
+    </form>
 </div>
 </body>
 </html>
+
+
+
+
+
 
 
 
